# docx-md-docx

./: README.md  TODO.md  pyproject.toml  spec.md
src/adeu/: cli.py  diff.py  models.py
src/adeu/redline/: engine.py  mapper.py
tests/: test_roundtrip.py
