[tool.poetry]
name = "adeu"
version = "0.1.0"
description = "Automated DOCX Redlining Engine"
authors = ["Mikko Korpela"]
readme = "spec.md"
packages = [{include = "adeu", from = "src"}]

[tool.poetry.scripts]
adeu = "adeu.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
python-docx = "*"
structlog = "*"
pydantic = "*"
lxml = "*"
diff-match-patch = "*" 
mcp = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"
hypothesis = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"